--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "python.linting.pylintEnabled": true,
         "python.analysis.diagnosticSeverityOverrides": {
           "reportGeneralTypeIssues": "none"
-        }
+        },
+        "cSpell.words": [
+          "kneeldiamonds"
+        ]
      
 }
